k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo-mock
  labels:
    app.kubernetes.io/name: echo-mock
